--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
-    --caixa-cor-frente: blue;
-    --caixa-cor-verso: red;
-    --fundo: yellow;
+    --caixa-cor-frente: #2ee6be;
+    --caixa-cor-verso: #891fb3;
+    --fundo: rgb(80, 235, 255);
     --preto: black;
     --branco: white;
     --cor-texto-destaque: orange;
