--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-    --caixa-cor-frente: #2ee6be;
+    --caixa-cor-frente: #ac735d;
     --caixa-cor-verso: #891fb3;
     --fundo: rgb(80, 235, 255);
     --preto: black;
