--- a/style.css
+++ b/style.css
@@ -32,3 +32,9 @@ footer {
     flex-grow: 1;
     flex-basis: calc(33% - 6rem);
 }
+
+.cartao_conteudo{
+    background-color: var(--caixa-cor-frente);
+    text-align: center;
+    /*color:var(--branco); */
+}
