--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     --caixa-cor-verso: #891fb3;
     --fundo: rgb(255, 255, 255);
     --preto: black;
-    --branco: white;
+    --branco: rgb(73, 45, 175);
     --cor-texto-destaque: orange;
 }
 
