--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-    --caixa-cor-frente: #000000;
+    --caixa-cor-frente: #c741aa;
     --caixa-cor-verso: #891fb3;
     --fundo: rgb(236, 30, 30);
     --preto: black;
