--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ footer {
     text-align: center;
     color: var(--branco);
     transform-style: preserve-3d;
+    transition: transform 300ms ease-in-out;
 }
 
 .cartao_conteudo h3 {
