--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
     --text-color: #DBE4EF;
-    --card-front-color: #144480;
-    --card-back-color: #00F4BF;
+    --card-front-color: #b9572f;
+    --card-back-color: #8d3fd6;
     --fundo: #c3c4e3;
 }
 
