--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 :root {
-    --text-color: #DBE4EF;
+    --text-color: #ff0000;
     --card-front-color: #b9572f;
-    --card-back-color: #8d3fd6;
-    --fundo: #c3c4e3;
+    --card-back-color: #fffb00;
+    --fundo: #00ff00;
 }
 
 body {
