--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-    --text-color: #ff0000;
+    --text-color: #ffffff;
     --card-front-color: #b9572f;
     --card-back-color: #fffb00;
     --fundo: #00ff00;
